--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,8 @@ jobs:
         run: |
           set -eu
 
-          echo '1' $GITHUB_REF
-          echo '2' ${{ github.ref }}
-          echo '3' ${{ github.ref_name }}
-          echo '4' ${{ github.head_ref }}
-          echo '5' ${{ github.base_ref }}
+          milestones=$(gh api -X GET /repos/${{github.repository}}/milestones -f state=all)
+          milestone_number=$(echo "${milestones}" | jq ". | map(select(.title == \"${{ github.ref_name }}\")) | first | .number")
+          gh api -X PATCH "repos/${{github.repository}}/milestones/$milestone_number" -f state=closed
         env:
           GITHUB_TOKEN: ${{github.token}}
